--- a/Quiz-web/src/main/resources/templates/login.html
+++ b/Quiz-web/src/main/resources/templates/login.html
@@ -1,41 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Login</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.1.0/css/bootstrap.min.css/}" type="text/css"/>
+    <link rel="stylesheet" th:href="@{/webjars/font-awesome/5.0.10/web-fonts-with-css/css/fontawesome-all.min.css}"
+          type="text/css"/>
+    <link rel="stylesheet" th:href="@{/css/login.css}" type="text/css">
 </head>
 <body>
 
-<div class="container-fluid p-5 bg-light" style="background-color: #eeeeee !important;">
-    <h1 class="display-3 font-weight-normal">Mobile Store</h1>
-</div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-sm-5 align-self-center container-blue">
+                <div class="box">
+                    <h1 class="h1-login">Login</h1>
+                    <p class="p-error" th:if="${error}" th:text="${error}"></p>
+                    <form class="my-2" th:action="@{/j_spring_security_check}" method="POST">
+                        <div class="form-group">
+                            <p>Username</p>
+                            <div class="row row-input">
+                                <div class="col-1 m-2">
+                                    <i class="fa fa-user-circle" aria-hidden="true"></i>
+                                </div>
+                                <div class="col pr-0">
+                                    <input type="text" class="form-input" name="username" placeholder="Type your username" required="true" autofocus="true">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <p>Password</p>
+                            <div class="row row-input">
+                                <div class="col-1 m-2">
+                                    <i class="fa fa-lock" aria-hidden="true"></i>
+                                </div>
+                                <div class="col pr-0">
+                                    <input type="password" class="form-input" name="password" placeholder="Type your password" required="true">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-between m-0">
+                            <p class="p-login-question">Don't have account?</p>
+                            <p class="p-login-question">Forgot password?</p>
+                        </div>
+                        <button type="submit" class="gradient-button">Login</button>
+                    </form>
+                    <p class="p-login-with">Or</p>
+                    <p class="p-login-with">Login with</p>
+                    <div class="row justify-content-center my-2">
+                        <img class="px-2" src="https://img.icons8.com/color/48/000000/facebook-circled--v1.png"/>
+                        <img class="px-2" src="https://img.icons8.com/color/48/000000/google-logo.png"/>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-<div class="container col-md-4 col-sm-6 p-3 my-3">
-    <table class="table table-bordered table-striped">
-        <tbody>
-        <tr>
-            <td class="pb-0 pt-2">
-                <h5 class="font-weight-normal">Please sign in</h5>
-            </td>
-        </tr>
-        <tr>
-            <td class="pb-0">
-                <form autocomplete="off" th:action="@{/j_spring_security_check}" method="POST">
-                    <div class="form-group">
-                        <input type="text" name="username" class="form-control" placeholder="User Name" required="true" autofocus="true">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" name="password" class="form-control" placeholder="Password" required="true">
-                    </div>
-                    <button type="submit" class="btn btn-success btn-block">Login</button>
-                </form>
-                <a th:href="@{/signup}">Sign up</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-</div>
+    <script th:if="${error}">
+        document.getElementsByClassName("container-blue").item(0).style.backgroundColor="BlanchedAlmond";
+    </script>
+  
 </body>
 </html>
