modify answer choices view

--- a/Quiz-web/src/main/resources/templates/playQuiz.html
+++ b/Quiz-web/src/main/resources/templates/playQuiz.html
@@ -22,12 +22,12 @@
         <div class="question">What is your name ?</div>
         <div class="answer">
           <div class="row">
-            <div class="col col-sm-5 answer__a"></div>
-            <div class="col col-sm-5 answer__b"></div>
+            <button class="col col-sm-5 answer__a" onclick="addAnswer(this)"></button>
+            <button class="col col-sm-5 answer__b" onclick="addAnswer(this)"></button>
           </div>
           <div class="row">
-            <div class="col col-sm-5 answer__c"></div>
-            <div class="col col-sm-5 answer__d"></div>
+            <button class="col col-sm-5 answer__c" onclick="addAnswer(this)"></button>
+            <button class="col col-sm-5 answer__d" onclick="addAnswer(this)"></button>
           </div>
         </div>
       </div>
