--- a/Quiz-web/src/main/resources/templates/createListQuiz.html
+++ b/Quiz-web/src/main/resources/templates/createListQuiz.html
@@ -1,10 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-        <meta charset="UTF-8">
-        <title>Title</title>
-</head>
-<body>
 
+<head>
+    <meta charset="UTF-8">
+    <title>Create Quiz</title>
+</head>
+
+<body>
+    <form th:object="${listQuizForm}" th:action="@{/createListQuiz}" method="POST">
+        <div>Quiz name</div>
+        <input type="text" th:field="*{quizName}">
+
+        <div>Category name</div>
+        <input list="categoryList" th:field="*{categoryName}">
+        <datalist id="categoryList">
+            <th:block th:each="category: ${categoryList}">
+                <option th:value="${category.name}"></option>
+            </th:block>
+        </datalist>
+
+        <div>Time limit</div>
+        <input list="hour" th:field="*{timeLimitHour}" style="width: 2%;">
+        <datalist id="hour" style="width: 50%">
+            <option value=01></option>
+            <option value=02></option>
+            <option value=03></option>
+            <option value=04></option>
+            <option value=05></option>
+            <option value=06></option>
+            <option value=07></option>
+            <option value=08></option>
+            <option value=09></option>
+            <option value=10></option>
+            <option value=11></option>
+            <option value=12></option>
+        </datalist>
+
+        <input list="minute" th:field="*{timeLimitMinute}" style="width: 2%;">
+        <datalist id="minute">
+            <option value=01></option>
+            <option value=02></option>
+            <option value=03></option>
+            <option value=04></option>
+            <option value=05></option>
+            <option value=06></option>
+            <option value=07></option>
+            <option value=08></option>
+            <option value=09></option>
+            <option value=10></option>
+            <option value=11></option>
+            <option value=12></option>
+            <option value=13></option>
+            <option value=14></option>
+            <option value=15></option>
+            <option value=16></option>
+            <option value=17></option>
+            <option value=18></option>
+            <option value=19></option>
+            <option value=20></option>
+            <option value=21></option>
+            <option value=22></option>
+            <option value=23></option>
+            <option value=24></option>
+            <option value=25></option>
+            <option value=26></option>
+            <option value=27></option>
+            <option value=28></option>
+            <option value=29></option>
+            <option value=30></option>
+            <option value=31></option>
+            <option value=32></option>
+            <option value=33></option>
+            <option value=34></option>
+            <option value=35></option>
+            <option value=36></option>
+            <option value=37></option>
+            <option value=38></option>
+            <option value=39></option>
+            <option value=40></option>
+            <option value=41></option>
+            <option value=42></option>
+            <option value=43></option>
+            <option value=44></option>
+            <option value=45></option>
+            <option value=46></option>
+            <option value=47></option>
+            <option value=48></option>
+            <option value=49></option>
+            <option value=50></option>
+            <option value=51></option>
+            <option value=52></option>
+            <option value=53></option>
+            <option value=54></option>
+            <option value=55></option>
+            <option value=56></option>
+            <option value=57></option>
+            <option value=58></option>
+            <option value=59></option>
+        </datalist>
+
+        <input list="second" th:field="*{timeLimitSecond}" style="width: 2%;">
+        <datalist id="second">
+            <option value=01></option>
+            <option value=02></option>
+            <option value=03></option>
+            <option value=04></option>
+            <option value=05></option>
+            <option value=06></option>
+            <option value=07></option>
+            <option value=08></option>
+            <option value=09></option>
+            <option value=10></option>
+            <option value=11></option>
+            <option value=12></option>
+            <option value=13></option>
+            <option value=14></option>
+            <option value=15></option>
+            <option value=16></option>
+            <option value=17></option>
+            <option value=18></option>
+            <option value=19></option>
+            <option value=20></option>
+            <option value=21></option>
+            <option value=22></option>
+            <option value=23></option>
+            <option value=24></option>
+            <option value=25></option>
+            <option value=26></option>
+            <option value=27></option>
+            <option value=28></option>
+            <option value=29></option>
+            <option value=30></option>
+            <option value=31></option>
+            <option value=32></option>
+            <option value=33></option>
+            <option value=34></option>
+            <option value=35></option>
+            <option value=36></option>
+            <option value=37></option>
+            <option value=38></option>
+            <option value=39></option>
+            <option value=40></option>
+            <option value=41></option>
+            <option value=42></option>
+            <option value=43></option>
+            <option value=44></option>
+            <option value=45></option>
+            <option value=46></option>
+            <option value=47></option>
+            <option value=48></option>
+            <option value=49></option>
+            <option value=50></option>
+            <option value=51></option>
+            <option value=52></option>
+            <option value=53></option>
+            <option value=54></option>
+            <option value=55></option>
+            <option value=56></option>
+            <option value=57></option>
+            <option value=58></option>
+            <option value=59></option>
+        </datalist>
+
+        <button type="submit">Next</button>
+    </form>
 </body>
+
 </html>
