--- a/Quiz-web/src/main/resources/templates/createListQuiz.html
+++ b/Quiz-web/src/main/resources/templates/createListQuiz.html
@@ -9,10 +9,10 @@
 <body>
     <form th:object="${listQuizForm}" th:action="@{/createListQuiz}" method="POST">
         <div>Quiz name</div>
-        <input type="text" th:field="*{quizName}">
+        <input type="text" th:field="*{quizName}" required>
 
         <div>Category name</div>
-        <input list="categoryList" th:field="*{categoryName}">
+        <input list="categoryList" th:field="*{categoryName}" required>
         <datalist id="categoryList">
             <th:block th:each="category: ${categoryList}">
                 <option th:value="${category.name}"></option>
@@ -20,147 +20,159 @@
         </datalist>
 
         <div>Time limit</div>
-        <input list="hour" th:field="*{timeLimitHour}" style="width: 2%;">
-        <datalist id="hour" style="width: 50%">
-            <option value=01></option>
-            <option value=02></option>
-            <option value=03></option>
-            <option value=04></option>
-            <option value=05></option>
-            <option value=06></option>
-            <option value=07></option>
-            <option value=08></option>
-            <option value=09></option>
-            <option value=10></option>
-            <option value=11></option>
-            <option value=12></option>
-        </datalist>
-
-        <input list="minute" th:field="*{timeLimitMinute}" style="width: 2%;">
-        <datalist id="minute">
-            <option value=01></option>
-            <option value=02></option>
-            <option value=03></option>
-            <option value=04></option>
-            <option value=05></option>
-            <option value=06></option>
-            <option value=07></option>
-            <option value=08></option>
-            <option value=09></option>
-            <option value=10></option>
-            <option value=11></option>
-            <option value=12></option>
-            <option value=13></option>
-            <option value=14></option>
-            <option value=15></option>
-            <option value=16></option>
-            <option value=17></option>
-            <option value=18></option>
-            <option value=19></option>
-            <option value=20></option>
-            <option value=21></option>
-            <option value=22></option>
-            <option value=23></option>
-            <option value=24></option>
-            <option value=25></option>
-            <option value=26></option>
-            <option value=27></option>
-            <option value=28></option>
-            <option value=29></option>
-            <option value=30></option>
-            <option value=31></option>
-            <option value=32></option>
-            <option value=33></option>
-            <option value=34></option>
-            <option value=35></option>
-            <option value=36></option>
-            <option value=37></option>
-            <option value=38></option>
-            <option value=39></option>
-            <option value=40></option>
-            <option value=41></option>
-            <option value=42></option>
-            <option value=43></option>
-            <option value=44></option>
-            <option value=45></option>
-            <option value=46></option>
-            <option value=47></option>
-            <option value=48></option>
-            <option value=49></option>
-            <option value=50></option>
-            <option value=51></option>
-            <option value=52></option>
-            <option value=53></option>
-            <option value=54></option>
-            <option value=55></option>
-            <option value=56></option>
-            <option value=57></option>
-            <option value=58></option>
-            <option value=59></option>
-        </datalist>
-
-        <input list="second" th:field="*{timeLimitSecond}" style="width: 2%;">
-        <datalist id="second">
-            <option value=01></option>
-            <option value=02></option>
-            <option value=03></option>
-            <option value=04></option>
-            <option value=05></option>
-            <option value=06></option>
-            <option value=07></option>
-            <option value=08></option>
-            <option value=09></option>
-            <option value=10></option>
-            <option value=11></option>
-            <option value=12></option>
-            <option value=13></option>
-            <option value=14></option>
-            <option value=15></option>
-            <option value=16></option>
-            <option value=17></option>
-            <option value=18></option>
-            <option value=19></option>
-            <option value=20></option>
-            <option value=21></option>
-            <option value=22></option>
-            <option value=23></option>
-            <option value=24></option>
-            <option value=25></option>
-            <option value=26></option>
-            <option value=27></option>
-            <option value=28></option>
-            <option value=29></option>
-            <option value=30></option>
-            <option value=31></option>
-            <option value=32></option>
-            <option value=33></option>
-            <option value=34></option>
-            <option value=35></option>
-            <option value=36></option>
-            <option value=37></option>
-            <option value=38></option>
-            <option value=39></option>
-            <option value=40></option>
-            <option value=41></option>
-            <option value=42></option>
-            <option value=43></option>
-            <option value=44></option>
-            <option value=45></option>
-            <option value=46></option>
-            <option value=47></option>
-            <option value=48></option>
-            <option value=49></option>
-            <option value=50></option>
-            <option value=51></option>
-            <option value=52></option>
-            <option value=53></option>
-            <option value=54></option>
-            <option value=55></option>
-            <option value=56></option>
-            <option value=57></option>
-            <option value=58></option>
-            <option value=59></option>
-        </datalist>
+        <select id="hour" th:field="*{timeLimitHour}">
+            <option value=00>00</option>
+            <option value=01>01</option>
+            <option value=02>02</option>
+            <option value=03>03</option>
+            <option value=04>04</option>
+            <option value=05>05</option>
+            <option value=06>06</option>
+            <option value=07>07</option>
+            <option value=08>08</option>
+            <option value=09>09</option>
+            <option value=10>10</option>
+            <option value=11>11</option>
+            <option value=12>12</option>
+            <option value=13>13</option>
+            <option value=14>14</option>
+            <option value=15>15</option>
+            <option value=16>16</option>
+            <option value=17>17</option>
+            <option value=18>18</option>
+            <option value=19>19</option>
+            <option value=20>20</option>
+            <option value=21>21</option>
+            <option value=22>22</option>
+            <option value=23>23</option>
+            <option value=24>24</option>
+        </select>
+        <span>:</span>
+        <select id="minute" th:field="*{timeLimitMinute}">
+            <option value=00 selected>00</option>
+            <option value=01>01</option>
+            <option value=02>02</option>
+            <option value=03>03</option>
+            <option value=04>04</option>
+            <option value=05>05</option>
+            <option value=06>06</option>
+            <option value=07>07</option>
+            <option value=08>08</option>
+            <option value=09>09</option>
+            <option value=10>10</option>
+            <option value=11>11</option>
+            <option value=12>12</option>
+            <option value=13>13</option>
+            <option value=14>14</option>
+            <option value=15>15</option>
+            <option value=16>16</option>
+            <option value=17>17</option>
+            <option value=18>18</option>
+            <option value=19>19</option>
+            <option value=20>20</option>
+            <option value=21>21</option>
+            <option value=22>22</option>
+            <option value=23>23</option>
+            <option value=24>24</option>
+            <option value=25>25</option>
+            <option value=26>26</option>
+            <option value=27>27</option>
+            <option value=28>28</option>
+            <option value=29>29</option>
+            <option value=30>30</option>
+            <option value=31>31</option>
+            <option value=32>32</option>
+            <option value=33>33</option>
+            <option value=34>34</option>
+            <option value=35>35</option>
+            <option value=36>36</option>
+            <option value=37>37</option>
+            <option value=38>38</option>
+            <option value=39>39</option>
+            <option value=40>40</option>
+            <option value=41>41</option>
+            <option value=42>42</option>
+            <option value=43>43</option>
+            <option value=44>44</option>
+            <option value=45>45</option>
+            <option value=46>46</option>
+            <option value=47>47</option>
+            <option value=48>48</option>
+            <option value=49>49</option>
+            <option value=50>50</option>
+            <option value=51>51</option>
+            <option value=52>52</option>
+            <option value=53>53</option>
+            <option value=54>54</option>
+            <option value=55>55</option>
+            <option value=56>56</option>
+            <option value=57>57</option>
+            <option value=58>58</option>
+            <option value=59>59</option>
+        </select>
+        <span>:</span>
+        <select id="second" th:field="*{timeLimitSecond}">
+            <option value=00 selected>00</option>
+            <option value=01>01</option>
+            <option value=02>02</option>
+            <option value=03>03</option>
+            <option value=04>04</option>
+            <option value=05>05</option>
+            <option value=06>06</option>
+            <option value=07>07</option>
+            <option value=08>08</option>
+            <option value=09>09</option>
+            <option value=10>10</option>
+            <option value=11>11</option>
+            <option value=12>12</option>
+            <option value=13>13</option>
+            <option value=14>14</option>
+            <option value=15>15</option>
+            <option value=16>16</option>
+            <option value=17>17</option>
+            <option value=18>18</option>
+            <option value=19>19</option>
+            <option value=20>20</option>
+            <option value=21>21</option>
+            <option value=22>22</option>
+            <option value=23>23</option>
+            <option value=24>24</option>
+            <option value=25>25</option>
+            <option value=26>26</option>
+            <option value=27>27</option>
+            <option value=28>28</option>
+            <option value=29>29</option>
+            <option value=30>30</option>
+            <option value=31>31</option>
+            <option value=32>32</option>
+            <option value=33>33</option>
+            <option value=34>34</option>
+            <option value=35>35</option>
+            <option value=36>36</option>
+            <option value=37>37</option>
+            <option value=38>38</option>
+            <option value=39>39</option>
+            <option value=40>40</option>
+            <option value=41>41</option>
+            <option value=42>42</option>
+            <option value=43>43</option>
+            <option value=44>44</option>
+            <option value=45>45</option>
+            <option value=46>46</option>
+            <option value=47>47</option>
+            <option value=48>48</option>
+            <option value=49>49</option>
+            <option value=50>50</option>
+            <option value=51>51</option>
+            <option value=52>52</option>
+            <option value=53>53</option>
+            <option value=54>54</option>
+            <option value=55>55</option>
+            <option value=56>56</option>
+            <option value=57>57</option>
+            <option value=58>58</option>
+            <option value=59>59</option>
+        </select>
 
         <button type="submit">Next</button>
     </form>
