--- a/Quiz-web/src/main/resources/templates/signup.html
+++ b/Quiz-web/src/main/resources/templates/signup.html
@@ -85,7 +85,7 @@
                     <b>Date of birth</b>
                 </div>
                 <div class="col-md-5">
-                    <input type="date" th:field="*{doB}" required>
+                    <input type="date" th:field="*{doB}" style="width: 61.5%;" required>
                 </div>
             </div>
             <div class="form-group row" style="margin-left: 6vw;">
