PlayQuiz BE Update nearly final :v

--- a/Quiz-web/src/main/resources/templates/playQuiz.html
+++ b/Quiz-web/src/main/resources/templates/playQuiz.html
@@ -16,6 +16,7 @@
   var current = /*[[${current}]]*/ 1;
   var total = /*[[${total}]]*/ 15;
   var list_quiz_id = /*[[${list_quiz_id}]]*/ 1;
+  var checked = [$("#ans__a"), $("#ans__b"), $("#ans__c"), $("#ans__d")];
 </script>
 </head>
   <body>
