--- a/Quiz-web/src/main/resources/static/css/playQuiz.css
+++ b/Quiz-web/src/main/resources/static/css/playQuiz.css
@@ -66,6 +66,7 @@ button {
     margin: 1rem;
     padding: 1rem;
     box-shadow: 0 2px 8px rgba(0,0,0,0.12), 0 8px 8px rgba(0,0,0,0.24);
+    justify-content: center;
 }
 
 .answer__a {
@@ -154,7 +155,9 @@ button {
     border-radius: 0.625rem;
     margin: 1rem;
     padding: 1rem;
+    justify-content: center;
     box-shadow: 0 2px 8px rgba(0,0,0,0.12), 0 8px 8px rgba(0,0,0,0.24);
+    text-align: center;
 }
 
 /* When the checkbox is checked, add a blue background */
