PlayQuiz BE Update still nearly final

--- a/Quiz-web/src/main/resources/static/css/playQuiz.css
+++ b/Quiz-web/src/main/resources/static/css/playQuiz.css
@@ -109,7 +109,7 @@ button {
 
 .fa-caret-square-left,
 .fa-caret-square-right {
-    color: #545454;
+    color: antiquewhite;
     font-size: 5rem;
     margin: 1rem;
 }
