--- a/Quiz-web/src/main/resources/templates/student-profile.html
+++ b/Quiz-web/src/main/resources/templates/student-profile.html
@@ -37160,6 +37160,9 @@
                                         class="strip-default-btn-style settings-input-container log-out-button"><span
                                             data-v-2bb53aca="" class="settings-input-title">Log out</span></button>
                                 </div>
+                                <div data-v-2bb53aca="" class="settings-group-container">
+                                    
+                                </div>
                             </div>
                             <!---->
                         </div>
