--- a/Quiz-web/src/main/resources/templates/studentHome.html
+++ b/Quiz-web/src/main/resources/templates/studentHome.html
@@ -37153,7 +37153,7 @@
                       <div data-v-35baa134="" class="link-underline link-home-underline"></div>
                     </a>
                     <a data-v-35baa134="" role="tab" tabindex="0" class="navigation-menu-item"
-                      href="student-activity-running.html">
+                      href="/student-activity-running">
                       <div data-v-35baa134="">
                         <span data-v-35baa134="">
                           <i data-v-35baa134="" class="icon-far-history inactive-icon"></i>
@@ -37166,15 +37166,15 @@
                   </div>
                 </div>
                 <div data-v-35baa134="" class="user-info">
-                  <a data-v-35baa134="" href="/admin" target="_blank" class="admin-external-link">
+                  <a data-v-35baa134="" href="/instructor-home" class="admin-external-link">
                     <span data-v-35baa134="" class="admin-external-link-icon">
                       <i data-v-35baa134="" class="icon-fas-chalkboard-teacher"></i>
                     </span>
-                    <span data-v-35baa134="" class="admin-dashboard-link-text">&nbsp;Instructor Dashboard</span>
+                    <span data-v-35baa134="" class="admin-dashboard-link-text">&nbsp;Instructor Mode</span>
                   </a>
                 </div>
                 <div data-v-35baa134="" class="user-dropdown-container">
-                  <a data-v-35baa134="" href="/login" target="blank" data-v-35baa134="" class="user-dropdown-action">
+                  <a data-v-35baa134="" href="/login" class="user-dropdown-action">
                     <i data-v-35baa134="" class="icon-far-sign-out-alt logout-icon"></i>
                   </a>
                 </div>
