--- a/Quiz-web/src/main/resources/static/css/popupStyle.css
+++ b/Quiz-web/src/main/resources/static/css/popupStyle.css
@@ -22,7 +22,10 @@
     left: 40%;
     border: 3px solid #c0c0c0;
     z-index: 9;
-    background-color: rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0px 10px 20px rgb(100, 100, 100);
+    -webkit-box-shadow: 0px 10px 20px rgb(100, 100, 100);
+    box-shadow: 0px 10px 20px rgb(100, 100, 100);
+    border-radius: 18px;
 }
 
 /* Add styles to the form container */
@@ -30,6 +33,7 @@
     max-width: 300px;
     padding: 10px;
     background-color: white;
+    border-radius: 15px;
 }
 
 /* Full-width input fields */
@@ -40,6 +44,7 @@
     margin: 5px 0 22px 0;
     border: none;
     background: #f1f1f1;
+    border-radius: 10px;
 }
 
 .form-container select {
@@ -48,6 +53,7 @@
     margin: 5px 0 22px 0;
     border: none;
     background: #f1f1f1;
+    border-radius: 10px;
 }
 
 .form-container select:focus {
@@ -71,11 +77,13 @@
     width: 100%;
     margin-bottom: 10px;
     opacity: 0.8;
+    border-radius: 10px;
 }
 
 /* Add a red background color to the cancel button */
 .form-container .cancel {
     background-color: red;
+    border-radius: 10px;
 }
 
 /* Add some hover effects to buttons */
